<resources>
    <string name="app_name">My Assignment</string>
    <string name="generate_age">Generate age</string>
    <string name="age">Age</string>
    <string name="todo">TODO</string>
    <string name="enter_age">Enter Age :</string>
    <string name="agee">Age:</string>
    <string name="clear">Clear</string>
    <string name="button">TODO</string>
    <string name="ihjb">TODO</string>
    <string name="pkok">TODO</string>
    <string name="mjji">TODO</string>
    <string name="dedf">TODO</string>
</resources>